--- a/src/samples-core/samples-core.fsproj
+++ b/src/samples-core/samples-core.fsproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net461</TargetFramework>
+    <TargetFramework>netcoreapp2.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
@@ -10,7 +10,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="FSharp.Charting" Version="0.91.1" />
     <PackageReference Include="FSharp.Data" Version="3.0.0-beta" />
   </ItemGroup>
 
